objects/Events_Minor_Deliverable_Incident_Report__c.object
<CustomObject>
    <fields>
        <fullName>Date_of_Incident__c</fullName>
        <label>Date of Incident</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_due_to_checklist_non_adherence__c</fullName>
        <label>Issue due to checklist non-adherence?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minor_Deliverable_Type__c</fullName>
        <label>Minor Deliverable Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>Upload</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Customization</fullName>
                </value>
                <value>
                    <fullName>Rollout, SQL, Theme Push</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSA_Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>PSA Migration ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Health_Points__c</fullName>
        <formula>CASE(Severity_Index__c,
"1 - No issue with client",1,
"2 - Minor issue with client, Cvent escalation likely not required",3,
"3 - Minor issue with client, Cvent escalation likely required",5,
"4 - Major issue with client",8,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Converts Severity Index into points for Project Health: 1=1, 2=3, 3=5, 4=8.</inlineHelpText>
        <label>Project Health Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipName>Events_Minor_Deliverable_Incident_Report</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity_Index__c</fullName>
        <label>Severity Index</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 - No issue with client</fullName>
                </value>
                <value>
                    <fullName>2 - Minor issue with client, Cvent escalation likely not required</fullName>
                </value>
                <value>
                    <fullName>3 - Minor issue with client, Cvent escalation likely required</fullName>
                </value>
                <value>
                    <fullName>4 - Major issue with client</fullName>
                </value>
                <value>
                    <fullName>2 - Minor issue with client, Lanyon escalation likely not required</fullName>
                    <isActive>false</isActive>
                    <label>2 - Minor issue with client, Lanyon escalation likely not required</label>
                </value>
                <value>
                    <fullName>3 - Minor issue with client, Lanyon escalation likely required</fullName>
                    <isActive>false</isActive>
                    <label>3 - Minor issue with client, Lanyon escalation likely required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Events Deliverable Incident Report</label>
    <nameField>
        <displayFormat>EMD-{0}</displayFormat>
        <label>Events Minor Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events Deliverable Incident Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>